--- a/index.html
+++ b/index.html
@@ -240,37 +240,37 @@
                     "特性": "追求掌控感與精通度，熱衷於完成挑戰、累積點數、升級和獲得成就。他們享受向他人展示自身進步的過程。",
                     "核心驅動力": "主要為發展與成就。次要為所有權與佔有及社交影響力（競爭）。",
                     "成長建議": "透過清晰的進度條、分層的徽章系統、可比較的排行榜，以及可累積的虛擬點數或貨幣來激勵他們。設計需要挑戰性的任務，並確保他們的努力能獲得可量化的回報。",
-                    "imageUrl": "https://drive.google.com/uc?export=view&id=1YrEUzBpoMyS-zWs4FzbjtecaqID-lBQv"
+                    "imageUrl": "成就者.png"
                 },
                 "探索者": {
                     "特性": "主要動機是發現遊戲或系統中的新事物、隱藏內容和運作機制。他們享受解謎和尋找彩蛋的過程，對非線性的路徑和豐富的背景設定充滿好奇心。",
                     "核心驅動力": "主要為不可預測性與好奇心。次要為創造力與回饋的賦能。",
                     "成長建議": "透過埋藏隱藏的「彩蛋」、設計非線性的任務路徑、提供隨機獎勵事件，以及允許他們探索不同內容來滿足其好奇心。內容本身對他們來說就是獎勵。",
-                    "imageUrl": "https://drive.google.com/uc?export=view&id=1sQCc_XnU0PmpXXeAbjs0pZ3oLsL0ZRaF"
+                    "imageUrl": "探索者.png"
                 },
                 "社交者": {
                     "特性": "樂趣來自於與其他玩家的互動、建立關係並獲得歸屬感。他們重視合作、聊天和社群聯繫，而非單純的遊戲目標。",
                     "核心驅動力": "主要為社交影響力與關聯性。次要為史詩意義與使命感及創造力（共同創作）。",
                     "成長建議": "建立團隊/公會系統、設計需要協作的團隊目標、導入師徒系統，以及提供聊天與社交分享功能。他們需要一個能讓他們感到被包容和連結的環境。",
-                    "imageUrl": "https://drive.google.com/uc?export=view&id=1jRUR-pWn-cNHAKbs_dOy6HbK3NPLyERL"
+                    "imageUrl": "社交者.png"
                 },
                 "殺手": {
                     "特性": "喜歡與其他玩家競爭，並從戰勝對手中獲得快感。他們享受在競爭中展現技巧、對他人施加影響力，並追求排行榜上的頂尖位置。",
                     "核心驅動力": "主要為社交影響力（競爭與支配）。次要為損失與避免及發展與成就。",
                     "成長建議": "設計玩家對戰（PvP）模式和競爭性排行榜，並提供能讓他們在競爭中獲得優勢的裝備或能力。讓他們有機會挑戰並超越他人。",
-                    "imageUrl": "https://drive.google.com/uc?export=view&id=1q5w3fNRC7A9a0OQQzjvt4J_HElfK1TnK"
+                    "imageUrl": "殺手.png"
                 },
                 "慈善家": {
                     "特性": "純粹出於利他主義而行動，他們享受幫助他人的過程，並從對社群做出貢獻中獲得成就感和使命感。他們是社群的支柱，樂於分享知識和經驗。",
                     "核心驅動力": "主要為史詩意義與使命感。次要為社交影響力（指導/幫助）。",
                     "成長建議": "提供平台讓他們幫助新手、貢獻知識（如撰寫攻略），並將他們的貢獻以可視化的方式展示出來（例如，「您的回答已幫助了X位玩家」）。賦予其協助社群的特殊權限。",
-                    "imageUrl": "https://drive.google.com/uc?export=view&id=10Nl5Kn047ufBJ7HizHmlllxOr8ovkZFJ"
+                    "imageUrl": "慈善家.png"
                 },
                 "自由精神": {
                     "特性": "追求創造和自我表達，不喜歡被固定規則束縛。他們享受在沙盒環境中自由探索和創作的過程，並樂於看到自己的作品得到他人的欣賞。",
                     "核心驅動力": "主要為創造力與回饋的賦能。次要為不可預測性與好奇心。",
                     "成長建議": "提供高度自由的創作工具和沙盒環境，不設固定目標。允許他們設計、客製化並分享自己的內容。",
-                    "imageUrl": "https://drive.google.com/uc?export=view&id=1UYz30J1vSaMQlZoiD2r7UvJTb2WtEXvy"
+                    "imageUrl": "自由精神.png"
                 }
             };
 
